--- a/_sass/minimal-mistakes/skins/_air.scss
+++ b/_sass/minimal-mistakes/skins/_air.scss
@@ -3,10 +3,10 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #eeeeee !default;
+$background-color: #eeeeee !default; 
 $text-color: #222831 !default;
 $muted-text-color: #393e46 !default;
-$primary-color: #0092ca !default;
+$primary-color: #48718d !default; // #0092ca
 $border-color: mix(#fff, #393e46, 75%) !default;
 $footer-background-color: $primary-color !default;
 $link-color: #393e46 !default;
